fixed flicker when activating a PDF

--- a/src/client/views/collections/CollectionFreeFormView.scss
+++ b/src/client/views/collections/CollectionFreeFormView.scss
@@ -3,6 +3,7 @@
     .collectionfreeformview  > .jsx-parser{
         position:absolute;
         height: 100%;
+        width: 100%;
     }
         
     border-style: solid;
