--- a/src/client/views/nodes/PDFNode.scss
+++ b/src/client/views/nodes/PDFNode.scss
@@ -1,9 +1,15 @@
 .react-pdf__Page {
     transform-origin: left top;
-    //transform: scale(0.2, 0.2);
     position: absolute;
 }
-.pdfButton-Tray {
+.react-pdf__Document {
+    position: absolute;
+}
+.pdfNode-buttonTray {
     position:absolute;
     z-index: 25;
+}
+.pdfNode-contentContainer {
+    position: absolute;
+    transform-origin: "left top";
 }
